# ckb-script-templates

.github/workflows/: rust.yml
atomics-contract/: Cargo.toml
contract/: Cargo.toml
native-simulator/: Cargo.toml
stack-reorder-contract/: Cargo.toml
standalone-contract/: Cargo.toml
workspace/: Cargo.toml
x64-simulator-crate/: Cargo.toml
