[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.15.3", default-features = false }

[features]
default = [ "risc-v-contract" ]
risc-v-contract = [ "ckb-std/allocator", "ckb-std/calc-hash", "ckb-std/ckb-types", "ckb-std/libc" ]
native-simulator = ["ckb-std/native-simulator", "ckb-std/allocator", "ckb-std/calc-hash", "ckb-std/ckb-types", "ckb-std/libc"]
