[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "tests",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true

# TODO: Will be deleted after release
[replace]
"ckb-std:0.15.3" = { git = "https://github.com/joii2020/ckb-std.git", rev = "7d59e64dc6cf44dbd0a1af9a6333f2a3a23bfd8a" }